<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Preezy</string>
    <string name="label_general_promotion">Genreal Promotion</string>
    <string name="label_event_feed">Event Feed</string>
    <string name="label_my_profile">My Profile</string>
    <string name="label_business_card">Business Card</string>
    <string name="label_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
<<<<<<< HEAD
    
=======
>>>>>>> 8b6bf1f56a759a68d059d33844c73f410f594673
    <string name="action1">action1</string>
    <string name="action2">action2</string>
    <string name="action3">action3</string>
    <string name="action4">action4</string>
    <string name="action5">action5</string>
<<<<<<< HEAD
    
    <string name="buttonNotificationsDesc">Notifications Button</string>
    <string name="buttonEventFeedDesc">Event Feed Button</string>
    <string name="buttonBusinessCardDesc">Business Card Button</string>
=======
>>>>>>> 8b6bf1f56a759a68d059d33844c73f410f594673

</resources>
